# DICE

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .replit  Cargo.toml  Dockerfile  LICENSE  README.md  plan.md  replit.md  rustfmt.toml
.github/workflows/: ci.yml
src/: bot.rs  game.rs  main.rs  state.rs
