[package]
name = "telegram-dice-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "webhooks"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
axum = "0.7"
url = "2.4"
